# libchinese

./: .gitignore  APOSTROPHE_HANDLING.md  BRANCH_ORGANIZATION.md  CLOUD_API_INVESTIGATION.md  COMMIT_IMPLEMENTATION.md  CORRECTIONS_IMPLEMENTATION.md  Cargo.toml  EMOJI_SUPPORT.md  ENGINE_UNIFICATION.md  ENHANCED_PREDICTION_COMPLETE.md  ENHANCED_STORAGE_FORMATS.md  FEATURE_COMPARISON.md  FINAL_STATUS_REPORT.md  FUTURE.md  FUZZY_REFACTORING.md  IBUS_LIBPINYIN_ANALYSIS.md  IBUS_LIBZHUYIN_ANALYSIS.md  IME_ARCHITECTURE_PLAN.md  MIGRATION_SUMMARY.md  NGRAM_PREDICTION_COMPLETE.md  PARSER_ENHANCEMENTS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PREDICTION_COMPARISON.md  PROGRESS_GRAPHS.md  PROGRESS_SUMMARY.md  README.md  TODO_CONSOLIDATED.md  TRADITIONAL_CHINESE.md  UNFINISHED_CODE_AUDIT.md  UPSTREAM_FEATURE_COMPARISON.md  WADE_GILES_BRANCH.md  config.example.toml  plan.md  test_cases.txt  test_interactive.txt  verification_cases.txt  verification_report.txt
core/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONFIG_REFACTOR_COMPLETE.md  Cargo.toml  LANGUAGE_SPECIFIC_REFACTOR.md  phase2_detailed_mapping.md  phase2_libpinyin_mapping.md
core/src/: candidate.rs  composition.rs  context.rs  editor.rs  engine.rs  fuzzy.rs  ime_engine.rs  input_buffer.rs  interpolation.rs  lexicon.rs  lib.rs  ngram.rs  session.rs  single_gram.rs  trie.rs  userdict.rs  word_bigram.rs
core/src/ime/: candidates.rs  composition.rs  context.rs  editor.rs  engine.rs  mod.rs  session.rs
core/src/ime/editor/: mod.rs  (+3 more)
core/tests/: advanced_ranking.rs  cache_management.rs  enhanced_storage_formats.rs  integration_lambdas.rs  integration_pinyin_lambdas_content.rs  ported_ngram_tests.rs
core/upstream_audit/: ngram.md  pinyin_parser2.md
core/upstream_audit/lookup/: pinyin_lookup2.md
libpinyin/: Cargo.toml
libpinyin/examples/: cli_ime.rs  cloud_demo.rs  interactive.rs  wade_giles_input.rs
libpinyin/src/: cloud.rs  config.rs  double_pinyin.rs  engine.rs  fuzzy.rs  ime_engine.rs  input_buffer.rs  lib.rs  main.rs  parser.rs  session.rs  wade_giles.rs
libpinyin/src/candidates/: list.rs  mod.rs
libpinyin/src/editor/: mod.rs  phonetic.rs  punctuation.rs  suggestion.rs
libpinyin/tests/: debug_dp_decisions.rs  debug_engine_fuzzy.rs  debug_execution_path.rs  debug_fuzzy.rs  debug_fuzzy_logic.rs  debug_fuzzy_map.rs  debug_parser_detailed.rs  debug_segment_best.rs  double_pinyin_integration.rs  enhanced_fuzzy_tests.rs  enhancement_features.rs  parity_ported_tests.rs  ported_lookup_tests.rs  ported_parser_vectors.rs
libzhuyin/: Cargo.toml
libzhuyin/examples/: interactive.rs
libzhuyin/src/: config.rs  engine.rs  fuzzy_presets.rs  lib.rs  main.rs  parser.rs
libzhuyin/tests/: ime_integration.rs  zhuyin_corrections.rs
tools/: Cargo.toml  IMPORT_EXPORT_TOOLS.md  INTERPOLATION_BIGRAM_DB_PLAN.md  README.md  REDB_REFACTORING.md  REFACTORING_ANALYSIS.md  inspect_redb.rs
tools/convert_table/: Cargo.toml  README.md
tools/convert_tables/: Cargo.toml  README.md
tools/estimate_interpolation/: Cargo.toml
tools/export_userdict/: Cargo.toml  main.rs
tools/gen_bigrams_from_tables/: Cargo.toml
tools/gen_word_bigrams/: Cargo.toml
tools/import_phrases/: Cargo.toml  main.rs
tools/inspect_converted/: Cargo.toml
tools/inspect_redb/: Cargo.toml
tools/list_fst_keys/: Cargo.toml
tools/serialize_ngram/: Cargo.toml
tools/show_lexicon_entry/: Cargo.toml
tools/src/: bigram_db.rs  convert_interpolation.rs  convert_table.rs  lib.rs  main.rs
(+33 files in other folders)
