[package]
name = "libchinese-core"
version = "0.1.0"
edition = "2024"
description = "Core model, dictionary, and n-gram logic shared by libpinyin and libzhuyin"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
redb = "2.1"
fst = "0.4"
unicode-normalization = "0.1"
tracing = "0.1"
ahash = "0.8"
anyhow = "1.0"
