[package]
name = "libpinyin"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of libpinyin"
license = "MIT"

[lib]
name = "libpinyin"
path = "src/lib.rs"

[[example]]
name = "interactive"
path = "examples/interactive.rs"

[dependencies]
libchinese-core = { path = "../core" }
phf = { version = "0.11", features = ["macros"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
fst = "0.4"
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
