[package]
name = "libzhuyin"
version = "0.1.0"
edition = "2024"
description = "Zhuyin/Bopomofo input engine built on libchinese-core"
license = "MIT"

[dependencies]
libchinese-core = { path = "../core" }
phf = { version = "0.11", features = ["macros"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
