[package]
name = "convert_tables"
version = "0.1.0"
edition = "2024"
authors = ["libchinese team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fst = "0.4"
redb = "2.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
bincode = "1.3"
